--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=springBoot2
 
-spring.datasource.url=jdbc:mysql://localhost:3306/springboot2?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/springboot2?useSSL=false&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=RhodAnn5352
 spring.jpa.hibernate.ddl-auto=update
